# https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html
# TODO: Add PEP 621 'metadata' tables once decent support exists.
#       The 'ppsetuptools' wrapper is one possibility.
#       The 'whey' build backend as a replacement for 'setuptools' is another.

[build-system]
requires = ["setuptools>=40.9.0", "wheel"]

[tool.coverage.run]
branch = true
command_line = "-m pytest"
data_file = "caches/pytest/coverage.sqlite3"
source_pkgs = ["lockup"]
[tool.coverage.report]
precision = 2
[tool.coverage.html]
directory = "artifacts/coverage-pytest"

[tool.pylint.MASTER]
ignore = []
# Warning: Parallelizing causes diagnostic output to be interleaved
#          and also messes with similarities detection and dependency grouping.
jobs = 1
[tool.pylint.'MESSAGES CONTROL']
disable = [
  "consider-using-f-string",
  "fixme",
  "f-string-without-interpolation",
  "import-outside-toplevel",
  "misplaced-comparison-constant",
  "multiple-statements",
  "reimported",
  "too-few-public-methods",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
]
[tool.pylint.REPORTS]
output-format = "colorized"
reports = true
msg-template = "{path} {line:3d},{column:2d} [{symbol}] {msg}"
[tool.pylint.TYPECHECK]
ignore-mixin-members = false
[toll.pylint.SPELLING]
spelling-dict = 'en_US'
spelling-ignore-comment-directives = [ 'mypy:', 'pylint:' ]
[tool.pylint.BASIC]
good-names = [ "_", "__" ]
include-naming-hint = true
const-rgx = '([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$'
const-name-hint = '([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$'
[tool.pylint.FORMAT]
max-line-length = 79
ignore-long-lines = '^(\s*(#\s*)?<?https?://\S+>?|.*\s+#\s*.*)$'
[tool.pylint.VARIABLES]
dummy-variables-rgx = '_$'
callbacks = []
[tool.pylint.DESIGN]
max-statements = 30
max-parents = 3
min-public-methods = 1
[tool.pylint.CLASSES]
defining-attr-methods = ["__init__", "__new__"]
valid-classmethod-first-arg = ["kind", "class_"]
valid-metaclass-classmethod-first-arg = ["maker", "factory"]
exclude-protected = []
[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ["BaseException", "Exception"]
[tool.pylint.SIMILARITIES]
min-similarity-lines = 5
ignore-imports = true

[tool.pytest.ini_options]
minversion = "6.1"
addopts = "--exitfirst -rA --doctest-modules --doctest-glob='*.rst'"
testpaths = ["tests/python3", "sources/sphinx"]
python_files = ["*.py"]
python_functions = ["test_[0-9][0-9][0-9]_*"]
cache_dir = "caches/pytest"

[tool.tox]
# https://tox.readthedocs.io/en/latest/config.html
legacy_tox_ini = """
[tox]
minversion = 3.20
toxworkdir = caches/tox
envlist = py36, py37, py38, py39, py310

[testenv]
deps = pipenv
setenv =
    PIPENV_VERBOSITY=-1
passenv = HYPOTHESIS_STORAGE_DIRECTORY
commands =
    pipenv install --skip-lock --dev
    pipenv run coverage run --parallel-mode
"""

[tool.yapf]
# https://github.com/google/yapf
allow_multiline_dictionary_keys = true
allow_multiline_lambdas = true
blank_lines_between_top_level_imports_and_variables = 2
blank_line_before_module_docstring = true
blank_line_before_nested_class_or_def = true
coalesce_brackets = true
#continuation_align_style = 'SPACE'
dedent_closing_brackets = true
disable_ending_comma_heuristic = true
each_dict_entry_on_separate_line = false
indent_dictionary_value = true
spaces_around_default_or_named_assign = true
spaces_around_dict_delimiters = true
spaces_around_list_delimiters = true
spaces_around_power_operator = true
spaces_around_subscript_colon = true
spaces_around_tuple_delimiters = true
space_inside_brackets = true
split_arguments_when_comma_terminated = true
split_before_arithmetic_operator = true
split_before_dot = false
split_before_expression_after_opening_paren = true
#split_before_named_assigns = true
