# https://packaging.python.org/guides/distributing-packages-using-setuptools/#setup-args
# https://docs.python.org/3/distutils/setupscript.html#writing-the-setup-script
# https://setuptools.readthedocs.io/en/latest/references/keywords.html
# TODO: Merge into 'pyproject.toml' once PEP 621
#       (https://www.python.org/dev/peps/pep-0621/) is approved.

[metadata]
name = lockup
version = 1.0.0c1
description = An immutable module class, class factory, and zero-initialization namespace.
url = https://github.com/emcd/python-lockup
author = Eric McDonald
author_email = the.eric.mcdonald+foss-lockup@gmail.com
maintainer = Eric McDonald
maintainer_email = the.eric.mcdonald+foss-lockup@gmail.com
license = Apache-2.0
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
keywords = factory namespace immutability api
# TODO: project_urls

[options]
packages = find:
package_dir =
    =sources/python3
setup_requires =
    bandit
    bump2version
    coverage[toml]
    furo
    hypothesis
    invoke
    mypy
    pylint
    pytest
    semgrep
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs==2021.3.28b7
    tox
    tox-asdf
    twine
    wheel

[options.packages.find]
where = sources/python3
include = *

[build]
build_base = caches/setuptools

[sdist]
dist_dir = artifacts/sdists

[bdist_wheel]
dist_dir = artifacts/wheels
