# https://packaging.python.org/guides/distributing-packages-using-setuptools/#setup-args
# https://docs.python.org/3/distutils/setupscript.html#writing-the-setup-script
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.readthedocs.io/en/latest/references/keywords.html
# TODO: Merge into 'pyproject.toml' once PEP 621
#       (https://www.python.org/dev/peps/pep-0621/) has been implemented
#       by 'setuptools' or if we switch to 'whey' or wrap with 'ppsetuptools'.

[metadata]
name = lockup
version = 2.0a202112310633
description = Immutable and concealed attributes for classes, modules, and namespaces.
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
url = https://github.com/emcd/python-lockup
author = Eric McDonald
author_email = python-lockup@googlegroups.com
maintainer = Eric McDonald
maintainer_email = python-lockup@googlegroups.com
license = Apache-2.0
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
keywords = api attribute concealment immutability namespace
project_urls =
    Documentation = https://emcd.github.io/python-lockup
    Source Code = https://github.com/emcd/python-lockup
    Issue Tracker = https://github.com/emcd/python-lockup/issues
    Google Group = https://groups.google.com/g/python-lockup

[options]
packages = find:
package_dir =
    =sources/python3
# Coverage 6.1 series breaks how we handle .gitignore files.
# Both Mypy and Pylint rely on 'typed_ast',
# which does not build under PyPy as of this writing (2021-12-23).
# Latest release of YAPF is missing full support for 'yapf-diff'
# and hence a Git commit hash is used instead. (As of 2021-12-23.)
setup_requires =
    bandit
    bump2version
    coverage[toml]>=6.2
    furo
    hypothesis
    invoke
    mypy;implementation_name!="pypy"
    pre-commit
    pylint;implementation_name!="pypy"
    pytest
    semgrep
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
    tomli
    tox
    tox-asdf
    twine
    wheel
    yapf @ git+https://github.com/google/yapf.git@9d6808a3d9b9a0ea40efea0c7cc3247464dbc291

[options.packages.find]
where = sources/python3
include = *

[build]
build_base = caches/setuptools

[sdist]
dist_dir = artifacts/sdists

[bdist_wheel]
dist_dir = artifacts/wheels
